; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.func.c_islogin.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.func.c_islogin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@chkstop = common dso_local global i64 0, align 8
@setintr = common dso_local global i64 0, align 8
@loginsh = common dso_local global i64 0, align 8
@ERR_NOTLOGIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @islogin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @islogin() #0 {
  %1 = load i64, i64* @chkstop, align 8
  %2 = icmp eq i64 %1, 0
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = load i64, i64* @setintr, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %3
  %7 = call i32 @panystop(i32 0)
  br label %8

8:                                                ; preds = %6, %3, %0
  %9 = load i64, i64* @loginsh, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %8
  br label %15

12:                                               ; preds = %8
  %13 = load i32, i32* @ERR_NOTLOGIN, align 4
  %14 = call i32 @stderror(i32 %13)
  br label %15

15:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @panystop(i32) #1

declare dso_local i32 @stderror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
